# yadon-agents

./: .gitignore  CLAUDE.md  README.md  dashboard.md  first_setup.sh  pyproject.toml  setup.py  start.sh  stop.sh
.claude/: settings.json
.claude/hooks/: enforce-role.sh
.claude/rules/: protocol.md  python.md  security.md  testing.md
config/: panes-yadon-agent.yaml  panes-yadon-agents.yaml  panes.yaml  settings.yaml
daemons/: socket_protocol.py  yadon_daemon.py  yadoran_daemon.py
docs/: dashboard.md
instructions/: yadoking.md  yadon.md  yadon_gal.md  yadon_pokoa.md  yadoran.md
memory/: exchange_counter.md  global_context.md  yadoking_pending.md
pet/: agent_socket_server.py  config.py  pixel_data.py  pokemon_menu.py  socket_server.py  speech_bubble.py  utils.py  yadon_pet.py  yadoran_agent_socket_server.py  yadoran_pet.py  yadoran_pixel_data.py
queue/: yadoking_to_yadoran.yaml
queue/reports/: yadon1_report.yaml  yadon2_report.yaml  yadon3_report.yaml  yadon4_report.yaml  yadon5_report.yaml  yadon6_report.yaml  yadon7_report.yaml  yadon8_report.yaml
queue/tasks/: yadon1.yaml  yadon2.yaml  yadon3.yaml  yadon4.yaml  yadon5.yaml  yadon6.yaml  yadon7.yaml  yadon8.yaml
scripts/: README.md  auto_runner.sh  check_status.sh  get_pane.sh  monitor_tokens.sh  notify.sh  pet_say.sh  restart_daemons.sh  send_task.sh  start_verification.sh  stop.sh  token_monitor.sh
src/yadon_agents/: __init__.py  ascii_art.py  cli.py  commands.py  gui_daemon.py
src/yadon_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
status/: master_status.yaml
templates/: context_template.md
tests/: conftest.py
tests/agent/: test_base.py  test_base_socket.py  test_edge_cases.py  test_manager.py  test_manager_integration.py  test_worker.py
tests/cli/: __init__.py  test_cli_integration.py  test_cli_main.py  (+1 more)
(+65 files in other folders)
