[project]
name = "yadon-agents"
version = "0.1.0"
description = "ヤドン・エージェント — マルチエージェントシステム"
requires-python = ">=3.9"
dependencies = [
    "PyQt6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
yadon = "yadon_agents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yadon_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
