[project]
name = "yadon-agents"
version = "0.1.0"
description = "ヤドン・エージェント — マルチエージェントシステム"
requires-python = ">=3.9"
dependencies = [
    "PyQt6>=6.5.0",
]

[project.scripts]
yadon = "yadon_agents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yadon_agents"]

[tool.setuptools.package-data]
yadon_agents.instructions = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "platform_linux: Linux固有のテスト",
    "platform_darwin: macOS固有のテスト",
    "platform_windows: Windows固有のテスト",
    "slow: 時間のかかるテスト",
    "integration: 統合テスト",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
